--- a/force-app/main/default/lwc/createProgressNoteReminderWrapper/createProgressNoteReminderWrapper.html
+++ b/force-app/main/default/lwc/createProgressNoteReminderWrapper/createProgressNoteReminderWrapper.html
@@ -18,7 +18,10 @@
                     created-pn-id={createdPNId} 
                     onshowloader={handleShowLoader} 
                     onhideloader={handleHideLoader}
-                    encounter-id={recordId}>
+                    parent-record-id={recordId}
+                    encounter-id={recordId}
+                    
+                    >
                 </c-create-reminder-form>
             </template>
         </lightning-card>
